WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
308055
[GStreamer] ASSERT in VideoFrameGStreamer when handling incoming libwebrtc video frames
https://bugs.webkit.org/show_bug.cgi?id=308055
Summary
[GStreamer] ASSERT in VideoFrameGStreamer when handling incoming libwebrtc vi...
Philippe Normand
Reported
2026-02-17 08:42:54 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2026-02-17 09:37:59 PST
Pull request:
https://github.com/WebKit/WebKit/pull/58858
EWS
Comment 2
2026-02-19 00:54:37 PST
Committed
307816@main
(b48d5d91d0e7): <
https://commits.webkit.org/307816@main
> Reviewed commits have been landed. Closing PR #58858 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-02-19 00:55:14 PST
<
rdar://problem/170705074
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug