Cherry-pick 307816@main (b48d5d91d0e7). https://bugs.webkit.org/show_bug.cgi?id=308055

[GStreamer] ASSERT in VideoFrameGStreamer when handling incoming libwebrtc video frames
    https://bugs.webkit.org/show_bug.cgi?id=308055

    Reviewed by Xabier Rodriguez-Calvar.

    GStreamer Incoming LibWebRTC video sources create "encoded" video frames when the playback is done
    with a hardware decoder, so in that situation the DMABufFormat information has to remain blank.

    * Source/WebCore/platform/graphics/gstreamer/VideoFrameGStreamer.cpp:
    (WebCore::videoFormatToDRMFourcc):
    (WebCore::VideoFrameGStreamer::infoFromCaps):

    Canonical link: https://commits.webkit.org/307816@main

Canonical link: https://commits.webkit.org/305877.85@webkitglib/2.52